--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-  * {
+*{
   box-sizing: border-box;
 }
 
@@ -13,7 +13,7 @@ h1
 
 body 
 {
-  background-color: wheat;
+  background-color: rgb(124, 108, 143);
 }
 
 p 
@@ -36,7 +36,7 @@ p
 section 
 {
   border: 1px solid black;
-  background-color: rgb(59, 77, 70);
+  background-color: rgb(127, 131, 90);
   width: 100%;
   height: auto;
   font-family: Helvetica;
@@ -60,7 +60,7 @@ section
   margin-bottom: 0;
   margin-top: 0;
   padding: 5px;
-  background-color: #FFFF00;
+  background-color: rgb(44, 94, 160);
 }
 
 #beef 
@@ -77,7 +77,7 @@ section
   margin-bottom: 0;
   margin-top: 0;
   padding: 5px;
-  background-color: #FF1439;
+  background-color: rgb(194, 60, 80);
   color: white
 }
 
@@ -94,7 +94,7 @@ section
   font-size: 125%;
   margin-bottom: 0;
   margin-top: 0;
-  background-color: #6495ED;
+  background-color: rgb(47, 59, 82);
   color: black;
   padding: 5px;
 }
@@ -127,15 +127,15 @@ section
 #header-nav 
 {
   border: 0;
-  background-color: rgb(219, 96, 24);
+  background-color: rgb(41, 17, 35);
   color: rgb(247, 242, 242);
 } 
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar 
 {
-  border: -20px solid #bd1f6e;
+  border: 1px solid #ebe0e5;
 }
-.navbar-header button.navbar-toggle 
+.navbar-header button .navbar-toggle
 {
   clear: both;
   margin-top: 30;
@@ -143,26 +143,28 @@ section
 
 .nav-header 
 {
-  background-color: #FFFFFF;
+  background-color: rgb(160, 87, 87);
 }
 
 .brand-nav {
-  color: #FFFFFF;
+  color: rgb(204, 139, 139);
   font-size: 1.5em;
 }
 
-#nav-list {
+#nav-list
+{
   color: white;
   text-align: left;
+  font-size: 1,8em;
 }
 
 hr 
 {
-  border-color: white;
+  border-color: rgb(158, 151, 151);
 }
 
 .item 
 {
-  color: white;
+  color: rgb(56, 54, 54);
   font-size: 1em;
 }
